--- a/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
@@ -1,3 +1,3 @@
-# Hi, I'm Jane Doe
+# Hi, I'm Ashley Downs
 
-I'm creating noice web experiences for the next generation of consumer-facing companies
+I'm a software developer, visionary leader, and problem solver. I'm passionate about solving problems, and constantly looking to learn new things everyday. The end goal is always put the business first and please the end users.
